# cs-439-miniproject

./: .gitignore  README.md  analytics.ipynb  centralized.py  data.py  distributed.py  model.py  parameters.py  plotting.ipynb  pyproject.toml  requirements.txt
conf/: parameters.py
docs/: hist_iid_balanced_C=10_B=32_E=5_R=1_mu=0.0_stag=0.0.npy
docs/conf/: base_centralized.yaml  base_distributed.yaml  c_notqdm.yaml
docs/results/: hist_balanced_C=10_B=32_E=5_R=1_mu=0.0_stag=0.0.npy
docs/results/centralized/: hist_B=32_E=5_R=1_O=sgd.npy  hist_B=32_E=5_R=2_O=sgd.npy
docs/results/distributed/: hist_C=10_B=32_E=5_R=200_mu=0.0_strag=0.0_CO=rmsprop_SO=adagrad_strat=fedavg.npy  hist_C=10_B=32_E=5_R=200_mu=0.0_strag=0.0_CO=rmsprop_SO=sgd_strat=fedavg.npy  hist_C=10_B=32_E=5_R=200_mu=0.0_strag=0.0_CO=sgd_SO=adagrad.npy  hist_C=10_B=32_E=5_R=200_mu=0.0_strag=0.0_CO=sgd_SO=adagrad_strat=fedkrum.npy  hist_C=10_B=32_E=5_R=200_mu=0.0_strag=0.0_CO=sgd_SO=adagrad_strat=fedmedian.npy  hist_C=10_B=32_E=5_R=200_mu=0.0_strag=0.0_CO=sgd_SO=adam.npy  hist_C=10_B=32_E=5_R=200_mu=0.0_strag=0.0_CO=sgd_SO=adam_strat=fedkrum.npy  hist_C=10_B=32_E=5_R=200_mu=0.0_strag=0.0_CO=sgd_SO=adam_strat=fedmedian.npy  hist_C=10_B=32_E=5_R=200_mu=0.0_strag=0.0_CO=sgd_SO=sgd.npy  hist_C=10_B=32_E=5_R=200_mu=0.0_strag=0.0_CO=sgd_SO=sgd_strat=fedkrum.npy  hist_C=10_B=32_E=5_R=200_mu=0.0_strag=0.0_CO=sgd_SO=sgd_strat=fedmedian.npy  (+65 more)
src/: client.py  utils.py
src/dataset/: MNIST.py
src/model/: MNIST_CNN.py  common.py  optimizer.py  yogi.py
src/strategy/: __init__.py  fedavg.py  fedkrum.py  fedmedian.py
